--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,2 @@
-Welcome to greggeter.com. Future home of more things. Brought to you by Netlify.
+<p>Welcome to greggeter.com. Future home of more things.</p>
+<p>Brought to you by Netlify.</p>
