--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-Welcome to greggeter.com. Future home of more things. Brought to you by Netlify.
+Welcome to greggeter.com. Future home of more things. <Br><br>Brought to you by Netlify.
